# just-view

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: color.rs  config.rs  fs.rs  image.rs  main.rs  scale.rs  shader.rs  transform.rs  vertex.rs  window.rs
src/format/: bmp.rs  gif.rs  heic.rs  jpg.rs  mod.rs  pcx.rs  png.rs  ppm.rs  tga.rs  webp.rs
